fix: address build error on build.gradle

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -73,5 +73,5 @@ repositories {
 dependencies {
     implementation 'com.facebook.react:react-native:+'
     implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.google.android.libraries.navigation:navigation:5.2.3"
+    implementation "com.google.android.libraries.navigation:navigation:5.2.3"
 }
