--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "react-native-navigation-sdk",
   "version": "0.2.0-beta",
   "author": "Google",
-  "description": "A react-native library for Google's Navigation SDK",
+  "description": "A React Native library for Navigation SDK on Google Maps Platform",
   "private": false,
-  "license": "UNLICENSED",
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/googlemaps/react-native-navigation-sdk"
+    "url": "https://github.com/googlemaps/react-native-navigation-sdk.git"
   },
   "bugs": {
     "url": "https://github.com/googlemaps/react-native-navigation-sdk/issues"
@@ -18,6 +18,7 @@
     "android",
     "library",
     "google-navigation",
+    "navigation-sdk",
     "navsdk"
   ],
   "scripts": {
@@ -45,5 +46,8 @@
     "eslint-plugin-react": "^7.33.1",
     "prettier": "^3.0.1",
     "typescript": "^5.1.6"
+    },
+    "publishConfig": {
+      "registry": "https://wombat-dressing-room.appspot.com"
   }
 }
