--- a/SampleApp/package.json
+++ b/SampleApp/package.json
@@ -14,7 +14,7 @@
     "react": "18.2.0",
     "react-native": "^0.72.4",
     "react-native-eject": "^0.2.0",
-    "react-native-navigation-sdk": "github:googlemaps/react-native-navigation-sdk",
+    "react-native-navigation-sdk": "github:googlemaps/react-native-navigation-sdk#0.2.2-beta",
     "react-native-permissions": "^3.10.1",
     "react-native-select-dropdown": "^3.4.0",
     "react-native-snackbar": "^2.6.2"
