--- a/lefthook.yml
+++ b/lefthook.yml
@@ -23,6 +23,8 @@ pre-commit:
     types:
       glob: '*.{js,ts, jsx, tsx}'
       run: npx tsc --noEmit
+    test:
+      run: npx jest --passWithNoTests
 commit-msg:
   parallel: true
   commands:
