--- a/example/package.json
+++ b/example/package.json
@@ -13,9 +13,14 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-gesture-handler": "^2.13.3",
     "react-native-permissions": "^4.1.5",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-snackbar": "^2.6.2"
   },
