--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.2",
     "@evilmartians/lefthook": "^1.5.0",
-    "@react-native/eslint-config": "^0.73.1",
+    "@react-native/eslint-config": "^0.74.83",
     "@testing-library/react-native": "^12.5.0",
     "@types/jest": "^29.5.5",
     "@types/react": "^18.2.44",
@@ -74,7 +74,7 @@
     "react-native": "0.74.1",
     "react-native-builder-bob": "^0.23.2",
     "turbo": "^1.10.7",
-    "typescript": "^5.2.2"
+    "typescript": ">=4.3.5 <5.4.0"
   },
   "resolutions": {
     "@types/react": "^18.2.44"
