ci: Update blunderbuss.yml to include Codemate (#158)

--- a/.github/blunderbuss.yml
+++ b/.github/blunderbuss.yml
@@ -13,10 +13,10 @@
 # limitations under the License.
 
 assign_issues:
-  - kevoye
+  - jokerttu
   - ArturoSalazarB16
   - caio1985
 assign_prs:
-  - kevoye
+  - jokerttu
   - ArturoSalazarB16
   - caio1985
