--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -37,3 +37,37 @@ jobs:
           release-type: npm
           package-name: "@googlemaps/react-native-navigation-sdk"
           bump-minor-pre-major: true
+
+      # Everything below is for NPM publishing when a release is cut.
+      # Note the "if" statement on all commands to make sure that publishing
+      # only happens when a release is cut.
+
+      - if: ${{ steps.release.outputs.release_created }}
+        name: Checkout
+        uses: actions/checkout@v4
+
+      - if: ${{ steps.release.outputs.release_created }}
+        name: Setup Node for Dependency Installation
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+          cache: npm
+
+      - if: ${{ steps.release.outputs.release_created }}
+        name: Install Dependencies
+        run: npm ci
+
+      # Now configure node with the registry used for publishing
+      - if: ${{ steps.release.outputs.release_created }}
+        name: Setup Node for Publishing
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+          registry-url: "https://wombat-dressing-room.appspot.com/"
+
+      - if: ${{ steps.release.outputs.release_created }}
+        name: Publish
+        # npm publish will trigger the build via the prepack hook
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_WOMBAT_TOKEN }}
