--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -32,8 +32,12 @@ permissions:
 name: Release Please
 
 jobs:
+  build-and-test:
+    uses: ./.github/workflows/ci.yml
+
   release-please:
     runs-on: ubuntu-latest
+    needs: build-and-test
     steps:
       - id: release
         name: Release Please
