--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-navigation-sdk",
+  "name": "@googlemaps/react-native-navigation-sdk",
   "version": "0.4.2",
   "author": "Google",
   "description": "A React Native library for Navigation SDK on Google Maps Platform",
