chore: update release-please passing information between jobs

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -50,5 +50,5 @@ jobs:
 
   publish:
     needs: release-please
-    if: ${{ jobs.release-please.outputs.release_ready }}
+    if: ${{ needs.release-please.outputs.release_ready }}
     uses: ./.github/workflows/publish.yml
