chore: add new carplay build target to podfile

--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -26,26 +26,35 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
+config = use_native_modules!
+
 target 'SampleApp' do
-  config = use_native_modules!
+  use_react_native!(
+    :path => config[:reactNativePath],
+    # An absolute path to your application root.
+    :app_path => "#{Pod::Config.instance.installation_root}/.."
+  )
+end
+
+target 'SampleAppCarPlay' do
+  carplay_config = use_native_modules!
 
   use_react_native!(
     :path => config[:reactNativePath],
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
+end
 
-  target 'SampleAppTests' do
-    inherit! :complete
-    # Pods for testing
-  end
+target 'SampleAppTests' do
+  inherit! :complete
+  # Pods for testing, shared between both SampleApp and SampleAppCarPlay
+end
 
-  post_install do |installer|
-    # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
+post_install do |installer|
     react_native_post_install(
       installer,
       config[:reactNativePath],
       :mac_catalyst_enabled => false
     )
-  end
 end
