--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "navsdk"
   ],
   "publishConfig": {
-    "registry": "https://wombat-dressing-room.appspot.com/@googlemaps/react-native-navigation-sdk/_ns"
+    "access": "public",
+    "registry": "https://wombat-dressing-room.appspot.com/"
   },
   "scripts": {
     "example": "yarn workspace react-native-navigation-sdk-sample",
