chore: Remove Caio/arturo from assign_issues list in blunderbuss

--- a/.github/blunderbuss.yml
+++ b/.github/blunderbuss.yml
@@ -14,8 +14,7 @@
 
 assign_issues:
   - jokerttu
-  - ArturoSalazarB16
-  - caio1985
+  - illuminati1911
 assign_prs:
   - jokerttu
   - ArturoSalazarB16
