--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build lib",
     "prepare": "bob build",
+    "prepare:example": "yarn workspace react-native-navigation-sdk-sample prepare",
     "build": "bob build"
   },
   "devDependencies": {
