--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*"
+    "react-native": ">=0.74.1 <0.76.0"
   },
   "workspaces": [
     "example"
