--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -31,4 +31,12 @@ buildscript {
     }
 }
 
+allprojects {
+   repositories {
+    maven {
+      url("$rootDir/../node_modules/detox/Detox-android")
+    }
+   }
+ }
+
 apply plugin: "com.facebook.react.rootproject"
