--- a/example/package.json
+++ b/example/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint .",
     "test": "jest",
     "build:android": "cd android && ./gradlew assembleDebug --no-daemon --console=plain -PreactNativeArchitectures=arm64-v8a",
-    "build:ios": "cd ios && xcodebuild -workspace SampleApp.xcworkspace -scheme SampleApp -configuration Debug -sdk iphonesimulator CC=clang CPLUSPLUS=clang++ LD=clang LDPLUSPLUS=clang++ GCC_OPTIMIZATION_LEVEL=0 GCC_PRECOMPILE_PREFIX_HEADER=YES ASSETCATALOG_COMPILER_OPTIMIZATION=time DEBUG_INFORMATION_FORMAT=dwarf COMPILER_INDEX_STORE_ENABLE=NO"
+    "build:ios": "cd ios && xcodebuild -workspace SampleApp.xcworkspace -scheme SampleApp -configuration Debug -sdk iphonesimulator CC=clang CPLUSPLUS=clang++ LD=clang LDPLUSPLUS=clang++ GCC_OPTIMIZATION_LEVEL=0 GCC_PRECOMPILE_PREFIX_HEADER=YES ASSETCATALOG_COMPILER_OPTIMIZATION=time DEBUG_INFORMATION_FORMAT=dwarf COMPILER_INDEX_STORE_ENABLE=NO",
+    "test:android": "DETOX_CONFIGURATION=android.emu.debug npx jest --config e2e/jest.config.js",
+    "test:ios": "DETOX_CONFIGURATION=ios.sim.debug npx jest --config e2e/jest.config.js"
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.18",
@@ -33,8 +35,11 @@
     "@react-native/babel-preset": "0.76.2",
     "@react-native/metro-config": "0.76.2",
     "@react-native/typescript-config": "0.76.2",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.9.0",
     "babel-plugin-module-resolver": "^5.0.0",
-    "detox": "^20.27.6"
+    "detox": "^20.27.6",
+    "ts-jest": "^29.2.5"
   },
   "engines": {
     "node": ">=18"
