--- a/example/android/gradle.properties
+++ b/example/android/gradle.properties
@@ -10,7 +10,11 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx512m -XX:MaxMetaspaceSize=256m
-org.gradle.jvmargs=-Xmx2g -XX\:MaxHeapSize\=4g -XX:MaxMetaspaceSize=1g
+org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=1g
+
+# CI heap issue fixes
+org.gradle.parallel=true
+org.gradle.daemon=true
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
