--- a/example/package.json
+++ b/example/package.json
@@ -11,7 +11,7 @@
     "build:android": "cd android && ./gradlew assembleDebug --no-daemon --console=plain -PreactNativeArchitectures=arm64-v8a",
     "build:ios": "cd ios && xcodebuild -workspace SampleApp.xcworkspace -scheme SampleApp -configuration Debug -sdk iphonesimulator CC=clang CPLUSPLUS=clang++ LD=clang LDPLUSPLUS=clang++ GCC_OPTIMIZATION_LEVEL=0 GCC_PRECOMPILE_PREFIX_HEADER=YES ASSETCATALOG_COMPILER_OPTIMIZATION=time DEBUG_INFORMATION_FORMAT=dwarf COMPILER_INDEX_STORE_ENABLE=NO",
     "test:android": "DETOX_CONFIGURATION=android.emu.debug npx jest --config e2e/jest.config.js",
-    "test:ios": "DETOX_CONFIGURATION=ios.sim.debug npx jest --config e2e/jest.config.js"
+    "test:ios": "DETOX_CONFIGURATION=ios.sim.debug npx jest --config e2e/jest.config.js --verbose"
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.18",
