--- a/example/package.json
+++ b/example/package.json
@@ -39,6 +39,7 @@
     "@types/node": "^22.9.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "detox": "^20.27.6",
+    "jest": "^29.7.0",
     "ts-jest": "^29.2.5"
   },
   "engines": {
