--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,20 +84,21 @@ jobs:
       - name: Check Java formatting
         run: ./scripts/format-java.sh --check
 
-  # TODO: build test orchestration for Android and iOS and run
-  # detox tests on both platforms.
-  #  test:
-  #    runs-on: ubuntu-latest
-  #    timeout-minutes: 30
-  #    steps:
-  #      - name: Checkout
-  #        uses: actions/checkout@v4
-  #
-  #      - name: Setup
-  #        uses: ./.github/actions/setup
-  #
-  #      - name: Run unit tests
-  #        run: yarn test --maxWorkers=2 --coverage
+  test:
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+      - name: Placeholder Test Step
+        run: echo "No tests to run yet" && true
+      # TODO: build test orchestration for Android and iOS and run detox tests on both platforms.
+      #  - name: Checkout
+      #    uses: actions/checkout@v4
+
+      #  - name: Setup
+      #    uses: ./.github/actions/setup
+
+      #  - name: Run unit tests
+      #    run: yarn test --maxWorkers=2 --coverage
 
   build-library:
     runs-on: ubuntu-latest
