--- a/android/build.gradle
+++ b/android/build.gradle
@@ -47,7 +47,7 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion 23
+        minSdkVersion 24
         targetSdkVersion 34
         versionCode 1
         // get version name from package.json version
@@ -56,7 +56,7 @@ android {
 
     buildTypes {
         release {
-        minifyEnabled false
+        minifyEnabled true
         }
     }
 
