--- a/example/package.json
+++ b/example/package.json
@@ -5,11 +5,21 @@
   "scripts": {
     "start": "react-native start",
     "android": "react-native run-android",
+    "android-release": "react-native run-android --mode release",
     "ios": "react-native run-ios",
+    "ios-release": "react-native run-ios --mode release",
     "lint": "eslint .",
     "test": "jest",
     "build:android": "cd android && ./gradlew assembleDebug --no-daemon --console=plain -PreactNativeArchitectures=arm64-v8a",
-    "build:ios": "cd ios && xcodebuild -workspace SampleApp.xcworkspace -scheme SampleApp -configuration Debug -sdk iphonesimulator CC=clang CPLUSPLUS=clang++ LD=clang LDPLUSPLUS=clang++ GCC_OPTIMIZATION_LEVEL=0 GCC_PRECOMPILE_PREFIX_HEADER=YES ASSETCATALOG_COMPILER_OPTIMIZATION=time DEBUG_INFORMATION_FORMAT=dwarf COMPILER_INDEX_STORE_ENABLE=NO"
+    "build:ios": "cd ios && xcodebuild -workspace SampleApp.xcworkspace -scheme SampleApp -configuration Debug -sdk iphonesimulator CC=clang CPLUSPLUS=clang++ LD=clang LDPLUSPLUS=clang++ GCC_OPTIMIZATION_LEVEL=0 GCC_PRECOMPILE_PREFIX_HEADER=YES ASSETCATALOG_COMPILER_OPTIMIZATION=time DEBUG_INFORMATION_FORMAT=dwarf COMPILER_INDEX_STORE_ENABLE=NO",
+    "detox:build:ios-debug": "detox build --configuration ios.sim.debug",
+    "detox:build:ios-release": "detox build --configuration ios.sim.release",
+    "detox:build:android-debug": "detox build --configuration android.emu.debug",
+    "detox:build:android-release": "detox build --configuration android.emu.release",
+    "detox:test:ios-debug": "detox test --configuration ios.sim.debug",
+    "detox:test:ios-release": "detox test --configuration ios.sim.release",
+    "detox:test:android-debug": "detox test --configuration android.emu.debug",
+    "detox:test:android-release": "detox test --configuration android.emu.release"
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.18",
@@ -33,7 +43,12 @@
     "@react-native/babel-preset": "0.76.2",
     "@react-native/metro-config": "0.76.2",
     "@react-native/typescript-config": "0.76.2",
-    "babel-plugin-module-resolver": "^5.0.0"
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.9.0",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "detox": "^20.27.6",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5"
   },
   "engines": {
     "node": ">=18"
