--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,7 +4,7 @@
 // you may not use this file except in compliance with the License.
 // You may obtain a copy of the License at
 //
-//     http://www.apache.org/licenses/LICENSE-2.0
+//   http://www.apache.org/licenses/LICENSE-2.0
 //
 // Unless required by applicable law or agreed to in writing, software
 // distributed under the License is distributed on an "AS IS" BASIS,
@@ -15,16 +15,16 @@
 import groovy.json.JsonSlurper
 
 buildscript {
-    ext.kotlin_version = '2.1.21'
-    repositories {
-        google()
-        mavenCentral()
-    }
+  ext.kotlin_version = '2.1.21'
+  repositories {
+    google()
+    mavenCentral()
+  }
 
-    dependencies {
-        classpath("com.android.tools.build:gradle:8.4.0")
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
+  dependencies {
+    classpath "com.android.tools.build:gradle:8.7.2"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+  }
 }
 
 def isNewArchitectureEnabled() {
@@ -38,44 +38,50 @@ if (isNewArchitectureEnabled()) {
 }
 
 android {
-    namespace "com.google.android.react.navsdk"
-    compileSdkVersion 35
+  namespace "com.google.android.react.navsdk"
+  compileSdkVersion 35
 
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
+  }
 
-    defaultConfig {
-        minSdkVersion 24
-        targetSdkVersion 34
-        versionCode 1
-        // get version name from package.json version
-        versionName "1.0"
-    }
+  defaultConfig {
+    minSdkVersion 24
+    targetSdkVersion 34
+  }
 
-    buildTypes {
-        release {
-        minifyEnabled true
-        }
-    }
+  buildFeatures {
+    buildConfig true
+  }
 
-    lintOptions {
-        abortOnError false
-        disable "GradleCompatible"
+  buildTypes {
+    release {
+      minifyEnabled true
     }
+  }
+
+  lintOptions {
+    abortOnError false
+    disable "GradleCompatible"
+  }
+
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
+  }
 }
 
 repositories {
-    google()
-    mavenCentral()
+  google()
+  mavenCentral()
 }
 
 dependencies {
-    implementation "androidx.car.app:app:1.4.0"
-    implementation "androidx.car.app:app-projected:1.4.0"
-    implementation 'com.facebook.react:react-native:+'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation "com.google.android.libraries.navigation:navigation:6.3.1"
-    api 'com.google.guava:guava:31.0.1-android'
+  implementation 'com.facebook.react:react-native:+'
+  implementation "androidx.car.app:app:1.4.0"
+  implementation "androidx.car.app:app-projected:1.4.0"
+  implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+  implementation "com.google.android.libraries.navigation:navigation:6.3.1"
+  api 'com.google.guava:guava:31.0.1-android'
 }
