--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@commitlint/config-conventional": "^19.2.2",
     "@evilmartians/lefthook": "^1.5.0",
     "@react-native/eslint-config": "^0.74.83",
+    "@react-native/typescript-config": "0.81.0",
     "@testing-library/react-native": "^12.5.0",
     "@types/react": "18.2.6",
     "commitlint": "^19.3.0",
@@ -76,7 +77,7 @@
     "react-native-builder-bob": "^0.29.0",
     "react-test-renderer": "18.2.0",
     "turbo": "^1.10.7",
-    "typescript": ">=4.3.5 <5.4.0"
+    "typescript": ">=4.3.5 <5.9.0"
   },
   "peerDependencies": {
     "react": "*",
@@ -85,7 +86,7 @@
   "workspaces": [
     "example"
   ],
-  "packageManager": "yarn@3.6.1",
+  "packageManager": "yarn@3.6.4",
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
