--- a/example/package.json
+++ b/example/package.json
@@ -7,11 +7,11 @@
     "android": "react-native run-android",
     "android-release": "react-native run-android --mode release",
     "ios": "react-native run-ios",
-    "ios-release": "react-native run-ios --mode release",
+    "ios-release": "react-native run-ios --mode Release",
     "lint": "eslint .",
     "test": "jest",
-    "build:android": "cd android && ./gradlew assembleDebug --no-daemon --console=plain -PreactNativeArchitectures=arm64-v8a",
-    "build:ios": "cd ios && xcodebuild -workspace SampleApp.xcworkspace -scheme SampleApp -configuration Debug -sdk iphonesimulator CC=clang CPLUSPLUS=clang++ LD=clang LDPLUSPLUS=clang++ GCC_OPTIMIZATION_LEVEL=0 GCC_PRECOMPILE_PREFIX_HEADER=YES ASSETCATALOG_COMPILER_OPTIMIZATION=time DEBUG_INFORMATION_FORMAT=dwarf COMPILER_INDEX_STORE_ENABLE=NO",
+    "build:android": "react-native build-android --extra-params \"--no-daemon --console=plain -PreactNativeArchitectures=arm64-v8a\"",
+    "build:ios": "react-native build-ios --mode Debug",
     "detox:build:ios-debug": "detox build --configuration ios.sim.debug",
     "detox:build:ios-release": "detox build --configuration ios.sim.release",
     "detox:build:android-debug": "detox build --configuration android.emu.debug",
@@ -24,33 +24,34 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "react": "18.3.1",
-    "react-native": "0.76.2",
-    "react-native-gesture-handler": "^2.21.0",
+    "react": "19.1.0",
+    "react-native": "0.81.1",
+    "react-native-gesture-handler": "2.25.0",
     "react-native-permissions": "^5.1.0",
-    "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "^3.35.0",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "4.15.4",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-snackbar": "^2.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0",
-    "@babel/runtime": "^7.26.0",
-    "@react-native-community/cli": "15.1.2",
-    "@react-native-community/cli-platform-android": "15.1.2",
-    "@react-native-community/cli-platform-ios": "15.1.2",
-    "@react-native/babel-preset": "0.76.2",
-    "@react-native/metro-config": "0.76.2",
-    "@react-native/typescript-config": "0.76.2",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/runtime": "^7.25.0",
+    "@react-native-community/cli": "20.0.0",
+    "@react-native-community/cli-platform-android": "20.0.0",
+    "@react-native-community/cli-platform-ios": "20.0.0",
+    "@react-native/babel-preset": "0.81.1",
+    "@react-native/metro-config": "0.81.1",
+    "@react-native/typescript-config": "0.81.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.9.0",
-    "babel-plugin-module-resolver": "^5.0.0",
     "detox": "^20.27.6",
     "jest": "^29.7.0",
+    "react-native-builder-bob": "^0.40.13",
+    "react-native-monorepo-config": "^0.1.9",
     "ts-jest": "^29.2.5"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=20"
   }
 }
