fix: pin react-test-renderer version to fix npm install issues (#471)

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "example": "yarn workspace react-native-navigation-sdk-sample",
     "test:types": "tsc --noEmit",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
+    "lint-fix": "eslint \"**/*.{js,ts,tsx}\" --fix",
     "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build lib",
     "prepare": "bob build",
     "prepare:example": "yarn workspace react-native-navigation-sdk-sample prepare",
@@ -59,25 +60,29 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^19.2.2",
-    "@eslint/compat": "^1.2.7",
-    "@eslint/eslintrc": "^3.3.0",
-    "@eslint/js": "^9.22.0",
     "@evilmartians/lefthook": "^1.5.0",
     "@react-native/babel-preset": "^0.81.1",
-    "@react-native/eslint-config": "^0.78.0",
     "@react-native/typescript-config": "^0.81.1",
     "@testing-library/react-native": "^13.3.3",
     "@types/react": "19.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.43.0",
+    "@typescript-eslint/parser": "^8.43.0",
     "commitlint": "^19.3.0",
     "del-cli": "^5.1.0",
-    "eslint": "^9.22.0",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-prettier": "^5.2.3",
-    "prettier": "^3.3.3",
+    "eslint": "^8.57.1",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-native": "^5.0.0",
+    "prettier": "^3.6.2",
     "react": "19.1.0",
     "react-native": "0.81.1",
     "react-native-builder-bob": "^0.40.13",
-    "react-test-renderer": "^19.1.0",
+    "react-test-renderer": "19.1.0",
     "turbo": "^1.10.7",
     "typescript": "^5.8.3"
   },
@@ -93,14 +98,6 @@
     "extends": [
       "@commitlint/config-conventional"
     ]
-  },
-  "prettier": {
-    "arrowParens": "avoid",
-    "quoteProps": "consistent",
-    "singleQuote": true,
-    "tabWidth": 2,
-    "trailingComma": "es5",
-    "useTabs": false
   },
   "react-native-builder-bob": {
     "source": "src",
